# MSSU-Smart-Hackthron-SmartHealthCompanion

./: .env.example  .gitignore  README.md  app.py  config.py  main.py  models.py  pyproject.toml  requirements.txt  routes.py
attached_assets/: Pasted-TypeError-TypeError-object-of-type-generator-has-no-len-Traceback-most-recent-call-last-File-1744632141574.txt  Pasted-from-flask-import-Flask-render-template-request-jsonify-redirect-url-for-session-from-functool-1744627667370.txt
static/css/: custom.css
static/js/: appointments.js  hospital_finder.js  location.js  main.js  symptom-checker.js
templates/: appointments.html  base.html  book_appointment.html  dashboard.html  doctor_finder.html  error.html  hospital_finder.html  index.html  login.html  notifications.html  profile.html  register.html  symptom_checker.html
